// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot when logged in 1`] = `
<DocumentFragment>
  <nav
    class="NavBar navbar navbar-expand-lg navbar-light"
  >
    <span
      class="NavBar-Brand navbar-brand"
    >
      <a
        class="nav-link"
        href="/healthyeater"
      >
        Healthy-Eater
        <img
          class="brand-img"
          height="28px"
          src="lettuce.png"
          width="28px"
        />
      </a>
    </span>
    <div
      class="NavBar-Container container"
    >
      <a
        class="nav-link"
        href="/findrecipes"
      >
        Find Recipes
      </a>
      <a
        class="nav-link"
        href="/savedrecipes"
      >
        Saved Recipes
      </a>
      <a
        class="nav-link"
        href="/mealplan"
      >
        Mealplan
      </a>
      <a
        class="nav-link"
        href="/points"
      >
        Calculate Points
      </a>
      <button
        class="general-btn-red logout-btn"
      >
         Log Out Tyler
      </button>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <nav
    class="NavBar navbar navbar-expand-lg navbar-light"
  >
    <span
      class="NavBar-Brand navbar-brand"
    >
      <a
        class="nav-link"
        href="/healthyeater"
      >
        Healthy-Eater
        <img
          class="brand-img"
          height="28px"
          src="lettuce.png"
          width="28px"
        />
      </a>
    </span>
    <div
      class="NavBar-Container container"
    >
      <a
        class="nav-link signup "
        href="/signup"
      >
        Signup
      </a>
      <button
        class="general-btn"
      >
        Continue as Guest
      </button>
      <a
        class="nav-link login"
        href="/login"
      >
        Login
      </a>
    </div>
  </nav>
</DocumentFragment>
`;
